--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "classnames": "^2.2.5",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
+    "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.2",
     "todomvc-app-css": "^2.1.1"
   },
   "scripts": {
